kubernetes/apps/database/cloudnative-pg/cluster/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-lb
  annotations:
    external-dns.alpha.kubernetes.io/hostname: postgres.jacob-williams.me
    io.cilium/lb-ipam-ips: 10.0.40.50
spec:
  type: LoadBalancer
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    cnpg.io/cluster: postgres16
    role: primary
