kubernetes/apps/database/cloudnative-pg/cluster/tcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: postgres
spec:
  parentRefs:
    - name: internal
      sectionName: postgres
  rules:
    - backendRefs:
        - name: postgres16-rw
          port: 5$32
